--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "chalk": "^4.1.1",
+    "date-fns": "^2.23.0",
     "ts-is-present": "^1.2.1"
   }
 }
